changeUsername Unique checking

--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" href="/svg/logo.svg">
 </head>
 <template name="basic">
+{{> sAlert}}
         {{> meteorisFlash}}
         <div class="meteoris-content">
             <!--{{>yield region="templateBasicHeader"}}-->
@@ -20,9 +21,3 @@
         <!--{{>yield region="templateBasicFooter"}}-->
         {{> templateBasicFooter}}
 </template>
-
-
-
-
-
-
