--- a/client/main.html
+++ b/client/main.html
@@ -33,5 +33,6 @@
 
         </div>
         <!--{{>yield region="templateBasicFooter"}}-->
+    <!--using co ship-->
         {{> templateBasicFooter}}
 </template>
