--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="/css/component.css" />
+    <link href="http://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:300,400,600|Roboto:400" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/css/standardize.css">
+    <link rel="stylesheet" href="/css/campaign-about-grid.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/modernizr.custom.js"></script>
     <script src="/js/classie.js"></script>
     <script src="/js/gnmenu.js"></script>
